# patient-name-extractor

./: .gitignore  Dockerfile  Makefile  README.md  example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
patient_name_extractor/: __init__.py  main.py
patient_name_extractor/extractor/: document_utils.py  interfaces.py  predict.py
tests/: test_predict.py
